# vovp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  env.sh  setup.py
docker/: build_cpu.dockerfile  build_cuda.dockerfile
docker/install/: centos_install_arrow.sh  centos_install_build.sh  centos_install_core.sh  centos_install_gcc7.sh  centos_install_gflags.sh  centos_install_python.sh
include/vovp/: c_runtime_api.h  device_api.h  ndarray.h  ndarray_utils.h  packed_func.h  plasma_manager.h  registry.h  serializer.h  utils.h  workspace_pool.h
python/vovp/: __init__.py  client.py  multiprocessing.py
scripts/: build.sh
src/: c_runtime_api.cc  main.cc  main.cpp  ndarray.cc  ndarray_utils.cc  plasma_manager.cc  workspace_pool.cc
tests/: test_client.py  test_mp.py  test_mp_pickle.py
